# outdoor_robot

./: README.md
husky_control/config/: control.yaml  localization.yaml
husky_description/urdf/: husky.urdf.xacro
husky_description/urdf/accessories/: intel_realsense.urdf.xacro
husky_gazebo/launch/: playpen.launch  realsense.launch  simulation.launch  spawn_husky.launch
husky_navigation/launch/: rtabmap.launch
husky_viz/launch/: mapping.launch  rtabmap.launch
husky_viz/rviz/: model.rviz  robot.rviz
main_package/: CMakeLists.txt  ReadMe.md  package.xml
main_package/config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  costmap_slope_static.yaml  laser_config.yaml  planner.yaml
main_package/launch/: code.launch  mapping.launch  move_base.launch  robot.rviz  run_gazebo_world.launch  run_simulation.launch  sensor_fusion.launch  teleoperation.launch
main_package/src/: docker_entrypoint.sh  estimating_surface_normals_depthCam.cpp  estimating_surface_normals_pointCloud.cpp  gps.cpp  laserscan_to_pointcloud.cpp  negative_volume.cpp  point_cloud_derivative.cpp  ransac_segmentation.cpp
main_package/src/gui/: gui.py
main_package/worlds/: iq_map_deneme.world  vilnius_duzenlenmis.world
main_package/worlds/media/dem/: izmir_129.tif  vilnius_129.tif
velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
